@@ -1,11 +1,16 @@
 package com.good.citizen.employees.service;
 
 import com.good.citizen.employees.api.request.EmployeeFilter;
+import com.good.citizen.employees.api.request.EmployeeRequest;
 import com.good.citizen.employees.model.Employee;
 import com.good.citizen.employees.repo.EmployeeRepo;
+import com.good.citizen.employees.repo.TeamRepo;
+import com.good.citizen.employees.repo.entity.EmployeeEntity;
+import com.good.citizen.employees.repo.entity.TeamEntity;
 import com.good.citizen.exceptions.NotFoundException;
 import org.springframework.stereotype.Service;
 
+import javax.transaction.Transactional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -13,9 +18,11 @@ import java.util.stream.Collectors;
 public class EmployeeService {
 
     private final EmployeeRepo repo;
+    private final TeamRepo teamRepo;
 
-    public EmployeeService(EmployeeRepo repo) {
+    public EmployeeService(EmployeeRepo repo, TeamRepo teamRepo) {
         this.repo = repo;
+        this.teamRepo = teamRepo;
     }
 
     public Set<Employee> getAllEmployees(EmployeeFilter filter) {
@@ -27,10 +34,24 @@ public class EmployeeService {
     public Employee getEmployee(Long id) {
         return this.repo.getEmployee(id)
                 .map(Employee::from)
-                .orElseThrow(() -> new NotFoundException(String.format("Employee with id: %d does not exist", id)));
+                .orElseThrow(() -> new NotFoundException("Employee with id: %d does not exist".formatted(id)));
     }
 
-    public void addEmployee() {
+    @Transactional
+    public void addEmployee(EmployeeRequest request) {
+        var teamEntity = this.teamRepo.getTeam(request.team())
+                .orElseThrow(() -> new NotFoundException("Team with name: %s does not exists".formatted(request.team())));
+        var employeeEntity = mapToEntity(request, teamEntity);
 
+        this.repo.save(employeeEntity);
+    }
+
+    private static EmployeeEntity mapToEntity(EmployeeRequest request, TeamEntity teamEntity) {
+        var employeeEntity = new EmployeeEntity();
+        employeeEntity.setFirstName(request.name());
+        employeeEntity.setLastName(request.lastName());
+        employeeEntity.setJobTitle(request.jobTitle());
+        employeeEntity.setTeam(teamEntity);
+        return employeeEntity;
     }
 }
